OPENSHIFT-POC/manifests/oracle_db.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: soans
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oracle-xe
  namespace: soans
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oracle-xe
  template:
    metadata:
      labels:
        app: oracle-xe
    spec:
      containers:
        - name: oracle-xe
          image: docker.io/gvenzl/oracle-xe:21-slim
          imagePullPolicy: Never
          ports:
            - name: sql
              containerPort: 1521
          resources:
            requests:
              cpu: "300m"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "3Gi"
          volumeMounts:
            - name: oradata
              mountPath: /opt/oracle/oradata
          startupProbe:
            tcpSocket:
              port: 1521
            failureThreshold: 60
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 1521
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 12
          livenessProbe:
            tcpSocket:
              port: 1521
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 6
      volumes:
        - name: oradata
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: oracle-db
  namespace: soans
spec:
  type: ClusterIP
  selector:
    app: oracle-xe
  ports:
    - name: sql
      port: 1521
      targetPort: 1521
